--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
-    "name": "root/mvc",
+    "name": "duyminh/phplite",
     "description": "Duy Minh <minhkirito1803@gmail.com>",
+    "type" : "project",
     "autoload": {
         "psr-4": {
             "App\\": "app/"
